--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,6 @@
     "activityBarBadge.background": "#6258c7",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#a2b8a4",
     "statusBar.background": "#85a288",
     "statusBar.debuggingBackground": "#a2859f",
     "statusBar.debuggingForeground": "#15202b",
@@ -18,7 +17,13 @@
     "titleBar.activeBackground": "#85a288",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#85a28899",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "editorGroup.border": "#a2b8a4",
+    "sideBar.border": "#a2b8a4",
+    "statusBar.border": "#85a288",
+    "statusBar.debuggingBorder": "#a2859f",
+    "tab.activeBorder": "#a2b8a4",
+    "titleBar.border": "#85a288"
   },
   "peacock.color": "#85a288"
 }
